First homepage changes

--- a/starlight/src/content/docs/index.mdx
+++ b/starlight/src/content/docs/index.mdx
@@ -7,12 +7,12 @@ hero:
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: About me
+      link: /about/about-me/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Check out my website!
+      link: https://www.jccpalmer.com
       icon: external
 ---
 
