Fix collection schema?

--- a/starlight/src/content/docs/index.mdx
+++ b/starlight/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: JC's portfolio
+description: Welcome to my docs portfolio!
 template: splash
 hero:
   tagline: Congrats on setting up a new Starlight project!
