More title page changes

--- a/starlight/src/content/docs/index.mdx
+++ b/starlight/src/content/docs/index.mdx
@@ -3,12 +3,12 @@ title: JC's portfolio
 description: Welcome to my docs portfolio!
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Welcome to my docs portfolio!
   image:
     file: ../../assets/houston.webp
   actions:
     - text: About me
-      link: /about/about-me/
+      link: /about/about-me.md/
       icon: right-arrow
       variant: primary
     - text: Check out my website!
