--- a/starlight/src/content/docs/index.mdx
+++ b/starlight/src/content/docs/index.mdx
@@ -21,8 +21,8 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Next steps
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Getting started" icon="pen">
+		Head to the [landing page](landing.mdx) to get started!
 	</Card>
 	<Card title="Add new content" icon="add-document">
 		Add Markdown or MDX files to `src/content/docs` to create new pages.
