Fix landing page component

--- a/starlight/src/content/docs/getting-started/landing.mdx
+++ b/starlight/src/content/docs/getting-started/landing.mdx
@@ -4,6 +4,8 @@ title: Landing page
 
 import { Icon } from '@astrojs/starlight/components';
 
+## Welcome!
+
 Welcome to my documentation portfolio.
 
 If you've landed here from my main [website](https://www.jccpalmer.com), then hello! You might have read about one of my projects and decided to head over here.
