--- a/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
+++ b/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
@@ -3,6 +3,7 @@ title: Deluge VPN
 ---
 
 import { Steps } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
 ## Background
 
@@ -77,9 +78,6 @@ Below are the steps to get the Deluge container installed. You will be adjusting
     a. In this example, the file is saved under `~/docker/deluge`.
 2. Copy the following code into the blank file. 
 
-<details>
-  <summary>Docker Compose</summary>
-  
   ```yaml
       	---
       version: "2.1"
@@ -100,8 +98,6 @@ Below are the steps to get the Deluge container installed. You will be adjusting
           - 6881:6881/udp
         restart: unless-stopped
   ```
-  
-</details>
 
 3. Fill in *YOUR\_TIMEZONE\_HERE* with an appropriate tz database format timezone, which you can find [here](https://en.wikipedia.org/wiki/List_of_tz_database_time_zones).
 4. Fill in *USERNAME* with your user account's username.
@@ -117,7 +113,9 @@ Below are the steps to get the Deluge container installed. You will be adjusting
 	a. Input `admin` for *username* and `deluge` for *password*.
 11. You will see your server's public IP address in the bottom right corner. Confirm this by checking it via a site such as [What's My IP?](https://www.whatsmyip.org/). My IP address is blurred for security reasons.
 
-![deluge-1-1.jpg](/deluge-1-1.jpg)
+<Aside type="caution" title="Coming soon!">
+  Screenshots coming soon.
+</Aside>
 
 12. The Deluge container is installed and ready for use if you don't want it masked behind a VPN. Assuming that you do, open your terminal to the Deluge directory and type the following.
   	1. `docker-compose down`
@@ -138,9 +136,6 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
 	2. In this example, it's under `docker/deluge`.
 3. Your code should look like the following with TZ filled in with your time zone and USERNAME with your account username.
   
-<details>
-  <summary>Docker Compose v1</summary>
-  
   ```yaml
       	---
       version: "2.1"
@@ -162,14 +157,9 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
         restart: unless-stopped
   ```
   
-</details>
-  
 4. However, since we have told Gluetun to be listening on port `8112`, you need to remove it from the Deluge container's Docker Compose to avoid port conflicts.
 5. You need to also link Deluge to Gluetun's network. So your Docker Compose code should look like the following.
-  
-  <details>
-  <summary>Docker Compose v2a</summary>
-  
+
   ```yaml
       	---
       version: "2.1"
@@ -192,13 +182,13 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
           container: gluetun
   ```
   
-</details>
-  
 6. Exit the Docker Compose file, then type the following command.
   	1. `docker compose up -d`
 7. If you go to the web UI at `http://localhost:8112`, you should notice that your IP address in the bottom right corner is different than your public one.
-  
-![deluge-1-1.jpg](/deluge-1-1.jpg)
+
+<Aside type="caution" title="Coming soon!">
+  Screenshots coming soon.
+</Aside>
 
 </Steps>
   
@@ -209,10 +199,7 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
 1. The container should start up with the previous configuration. If, however, you run into errors, you can shut Deluge down with the following command while inside the Deluge directory.
   	1. `docker compose down`
 2. Open your `docker-compose.yml` file and try changing `network_mode` to `service: gluetun` like the below code.
-  
-<details>
-  <summary>Docker Compose v2b</summary>
-  
+
   ```yaml
       	---
       version: "2.1"
@@ -235,11 +222,7 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
           service: gluetun
   ```
   
-</details>
-  
 3. Load up the container again with the following command.
   	1. `docker compose up -d`
-  
-</details>
 
 </Steps>
