--- a/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
+++ b/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
@@ -76,9 +76,11 @@ Below are the steps to get the Deluge container installed. You will be adjusting
 
 1. Create a YAML file named `docker-compose.yml` in your text editor or IDE of your choice and save it to the directory created in Step 1 in Preparation. 
     a. In this example, the file is saved under `~/docker/deluge`.
-2. Copy the following code into the blank file. 
+2. Copy the following code into the blank file.
 
-  ```
+</Steps>
+
+```yaml
       ---
       version: "2.1"
       services:
@@ -98,6 +100,7 @@ Below are the steps to get the Deluge container installed. You will be adjusting
           - 6881:6881/udp
         restart: unless-stopped
   ```
+<Steps>
 
 3. Fill in *YOUR\_TIMEZONE\_HERE* with an appropriate tz database format timezone, which you can find [here](https://en.wikipedia.org/wiki/List_of_tz_database_time_zones).
 4. Fill in *USERNAME* with your user account's username.
@@ -135,9 +138,11 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
 1. Navigate to where you saved the Deluge `docker-compose.yml` file.
 	2. In this example, it's under `docker/deluge`.
 3. Your code should look like the following with TZ filled in with your time zone and USERNAME with your account username.
+
+</Steps>
   
   ```yaml
-      	---
+      ---
       version: "2.1"
       services:
         deluge:
@@ -156,11 +161,12 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
           - 6881:6881/udp
         restart: unless-stopped
   ```
-  
+<Steps>  
+
 4. However, since we have told Gluetun to be listening on port `8112`, you need to remove it from the Deluge container's Docker Compose to avoid port conflicts.
 5. You need to also link Deluge to Gluetun's network. So your Docker Compose code should look like the following.
 
-  ```
+  ```yaml
       ---
       version: "2.1"
       services:
@@ -200,7 +206,9 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
   	1. `docker compose down`
 2. Open your `docker-compose.yml` file and try changing `network_mode` to `service: gluetun` like the below code.
 
-  ```
+</Steps>
+
+  ```yaml
       ---
       version: "2.1"
       services:
@@ -221,7 +229,9 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
         network_mode:
           service: gluetun
   ```
-  
+
+<Steps>
+
 3. Load up the container again with the following command.
   	1. `docker compose up -d`
 
