Fixing Deluge code blocks

--- a/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
+++ b/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
@@ -116,9 +116,13 @@ Below are the steps to get the Deluge container installed. You will be adjusting
 	a. Input `admin` for *username* and `deluge` for *password*.
 11. You will see your server's public IP address in the bottom right corner. Confirm this by checking it via a site such as [What's My IP?](https://www.whatsmyip.org/). My IP address is blurred for security reasons.
 
+</Steps>
+
 <Aside type="caution" title="Coming soon!">
   Screenshots coming soon.
 </Aside>
+
+<Steps>
 
 12. The Deluge container is installed and ready for use if you don't want it masked behind a VPN. Assuming that you do, open your terminal to the Deluge directory and type the following.
   	1. `docker-compose down`
@@ -192,11 +196,11 @@ Below are the steps necessary to set up Deluge to connect through the Gluetun VP
   	1. `docker compose up -d`
 7. If you go to the web UI at `http://localhost:8112`, you should notice that your IP address in the bottom right corner is different than your public one.
 
+</Steps>
+
 <Aside type="caution" title="Coming soon!">
   Screenshots coming soon.
 </Aside>
-
-</Steps>
   
 #### Errors with `network_mode: container`
 
