--- a/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
+++ b/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
@@ -7,11 +7,11 @@ import { Aside } from '@astrojs/starlight/components';
 
 ## Background
 
-This project sees a Deluge container route its traffic through a [Gluetun](/docker/gluetun/gluetun) container's network. A more thorough write-up is available [here](https://www.jccpalmer.com/blog/deluge-docker-vpn).
+This project sees a Deluge container route its traffic through a [Gluetun](../gluetun/gluetun.mdx) container's network. A more thorough write-up is available [here](https://www.jccpalmer.com/blog/deluge-docker-vpn).
 
 I set out on this project to create a [Deluge](https://deluge-torrent.org) container that would route through a virtual private network (VPN) and download files to my Network Attached Storage (NAS) server over the [Network File System (NFS)](https://en.wikipedia.org/wiki/Network_File_System) or [Samba (SMB)](https://en.wikipedia.org/wiki/Samba_(software)) protocols, which I would then sort through manually depending on the file type. Or, I would let Deluge continue to seed the file nested behind a VPN. 
 
-This project requires the use of Gluetun, the details for which you can find in my [Gluetun documentation](/gluetun/gluetun).
+This project requires the use of Gluetun, the details for which you can find in my [Gluetun documentation](../gluetun/gluetun).
 
 Essentially, the way this works is that the Deluge Docker container is networked to the Gluetun container. This is done by having Gluetun handle Deluge's port configuraiton (default is port `8112`), which works because Deluge is networked to it. So when you go to `http://SERVERIP:8112`, you get the Deluge web UI with a different IP address than your public one.
 
