Add warning to Deluge

--- a/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
+++ b/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
@@ -141,7 +141,9 @@ Here are the steps you'll need to get the Deluge container installed. You will b
 
 Here are the steps that you'll need to set up Deluge to connect through the Gluetun VPN tunnel.
 
-<Aside type = "danger">Be sure that you have the Gluetun container up and running now.</Aside>
+<Aside type = "danger" title = "Warning!">
+Be sure that you have the Gluetun container up and running now.
+</Aside>
 
 <Steps>
 
