--- a/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
+++ b/starlight/src/content/docs/docker/deluge-vpn/deluge-vpn.mdx
@@ -213,7 +213,7 @@ Be sure that you have the Gluetun container up and running now.
   Screenshots coming soon.
 </Aside>
   
-#### Errors with `network_mode: container`
+### Errors with `network_mode: container`
 
 <Steps>
   
