Grav updates and Gluetun fixes

--- a/starlight/src/content/docs/docker/gluetun/gluetun.mdx
+++ b/starlight/src/content/docs/docker/gluetun/gluetun.mdx
@@ -15,6 +15,8 @@ Gluetun uses the [OpenVPN protocol](https://openvpn.net/community-resources/open
 
 The developer of Gluetun has built a wiki with instructions for each supported VPN provider, which streamlines the installation and setup processes. What I have written here is the workflow I followed for my own installation.
 
+---
+
 ## Pre-requisites and preparation
 
 Here's what you need to get started with Gluetun.
@@ -30,7 +32,16 @@ Here's what you need to get started with Gluetun.
 
 ### Preparation
 
-No preparation needed for this project.
+<Steps>
+
+1. While connected to your Docker server, create a `docker` directory if you don't already have one.
+  `mkdir docker`
+2. Create a `gluetun` subdirectory within `docker`.
+  `mkdir docker/gluetun`
+
+</Steps>
+
+---
 
 ## Installation
 
