--- a/starlight/src/content/docs/docker/grav/grav.mdx
+++ b/starlight/src/content/docs/docker/grav/grav.mdx
@@ -2,24 +2,29 @@
 title: Grav
 ---
 
-# Grav
+import { Steps } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
-## Overview
+## Background
 
 [Grav](https://getgrav.org) is an open-source flat file content management system (CMS), also known as the backend of a website. It serves as the administration section of my [website](https://www.jccpalmer.com), running in a Docker container.
 
 I chose Grav for a couple of reasons:
 
-1. It's open-source.
-2. The flat file nature makes it extremely lightweight and fast, allowing me to run my entire main website on low-powered hardware, thus saving me money.
+- It's open-source.
+- The flat file nature makes it extremely lightweight and fast, allowing me to run my entire main website on low-powered hardware, thus saving me money.
 
 The admin panel is very simple and easy to use, it supports plugins, and I can even back up everything to my Nextcloud server on a daily basis in case things go wrong.
 
 Themes on Grav aren't as robust as something like WordPress, but I am okay with that. I like that my website is simple, though the lack of a dark mode concerns me. Maybe I just haven't discovered it yet.
 
-I have had Grav running my website for the better part of a year with no complaints. It's a healthy and lean alternative to WordPress and Drupal, and certainly worth your consideration.
+I have had Grav running my website for over a year with no complaints. It's a healthy and lean alternative to WordPress and Drupal, and certainly worth your consideration.
+
+---
 
 ## Prerequisites and preparation
+
+Here is everything you'll need to get started with your own Grav website.
 
 ### Prerequisites
 
@@ -29,6 +34,8 @@ I have had Grav running my website for the better part of a year with no complai
 
 ### Preparation
 
+<Steps>
+
 1. Connect to your server running Docker.
 2. Create a `docker` folder if you do not have one.
 	1. `mkdir docker`
@@ -37,19 +44,29 @@ I have had Grav running my website for the better part of a year with no complai
 4. Make a `config` folder inside the Grav directory.
 	1. `mkdir docker/grav/config`
 
-There is no additional preparation needed for this project. Please head over to the [Installing the Grav container](/docker/grav/install) document for the next steps.
+</Steps>
+
+You don't need any additional preparation for this project.
+
+---
 
 ## Installing the Grav container
 
 ### Installation
 
-We'll be using Docker Compose for this installation, so in your terminal, head over to the Grav directory you created in the [Prerequistes and preparation](/docker/grav/rereq-prep) document. I'll be using `nano` below, so if you're using a different text editor, substitute in your commands appropriately.
+We'll be using Docker Compose for this installation, so in your terminal, head over to the Grav directory you just created. I'll be using `nano` below, so if you're using a different text editor, substitute in your commands appropriately.
 
-1. Create a new `docker-compose.yml` file in the root of the Grav directory, which in this example is `~/docker/grav`.
+<Aside>These instructions don't cover pointing your DNS to your serving running the Grav container, nor will I detail how to secure your new website.</Aside>
+
+<Steps>
+
+1. Create a new `docker-compose.yml` file in the root of the Grav directory, which in this example is `docker/grav`.
 	1. `nano docker-compose.yml`
 2. Copy the following code and fill in it appropriately.
 
-	```
+</Steps>
+
+	```yaml
 		---
 		version: "2.1"
 		services:
@@ -67,6 +84,8 @@ We'll be using Docker Compose for this installation, so in your terminal, head o
 		    restart: unless-stopped
 		    ```
 
+<Steps>
+
 3. For *YOUR_TIMEZONE_HERE*, fill in your timezone with the appropriate tz code for where you live. You can find the codes [listed on Wikipedia](https://en.wikipedia.org/wiki/List_of_tz_database_time_zones).
 4. For *USERNAME*, fill it in with your user account's username.
 5. Save the file.
@@ -76,3 +95,5 @@ We'll be using Docker Compose for this installation, so in your terminal, head o
 8. In your web browser, navigate to the new URL using the container's port number. You'll need to know your server's IP address for this step.
 	1. `http://localhost:8080`
 9. The Grav admin panel should open and ask you to create an admin account. Follow the steps to do so and to start setting up your website.
+
+</Steps>
