--- a/starlight/src/content/docs/docker/gluetun/gluetun.mdx
+++ b/starlight/src/content/docs/docker/gluetun/gluetun.mdx
@@ -35,9 +35,9 @@ Here's what you need to get started with Gluetun.
 <Steps>
 
 1. While connected to your Docker server, create a `docker` directory if you don't already have one.
-  `mkdir docker`
+  1. `mkdir docker`
 2. Create a `gluetun` subdirectory within `docker`.
-  `mkdir docker/gluetun`
+  1. `mkdir docker/gluetun`
 
 </Steps>
 
