--- a/starlight/src/content/docs/docker/gluetun/gluetun.mdx
+++ b/starlight/src/content/docs/docker/gluetun/gluetun.mdx
@@ -34,10 +34,10 @@ Here's what you need to get started with Gluetun.
 
 <Steps>
 
-1. While connected to your Docker server, create a `docker` directory if you don't already have one.
-  1. `mkdir docker`
-2. Create a `gluetun` subdirectory within `docker`.
-  1. `mkdir docker/gluetun`
+1. Create a `docker` folder if you do not have one.
+	1. `mkdir docker`
+2. Create a `gluetun` folder inside the Docker one you just made.
+	1. `mkdir docker/gluetun`
 
 </Steps>
 
