--- a/starlight/src/content/docs/software/nixos/nixos.mdx
+++ b/starlight/src/content/docs/software/nixos/nixos.mdx
@@ -9,3 +9,4 @@ I set out on a journey to convert my Linux systems (minus my Steam Deck OLED and
 
 Here, I will document everything that I have learned throughout this process. From setting up flakes to switching to Home Manager and creating my first module, I have picked up so much knowledge since starting around Christmas 2024.
 
+**TODO**
